# geospatial_optimal_transport

./: .gitignore  README.md  pyproject.toml  setup.py
data_submission/: dist_matrix_mapmatched.csv  predictions_charging_nhits.csv  predictions_traffic_nhits.csv  predictions_traffic_nhits_sinkhorn.csv
data_submission/data_raw/: bikes_stations.csv  charging_stations.csv  traffic_cost.csv
data_submission/predictions/: predictions_charging_nhits.csv
data_submission/scale_results/: bikes_gtg.csv  bikes_gts.csv  bikes_sts.csv
data_submission/sinkhorn_results/: bikes_results.csv  charging_results.csv  traffic_results.csv
geoemd/: baseline_models.py  config.py  emd_eval.py  hierarchy_utils.py  io.py  model_wrapper.py  optimal_transport.py  parameter_optimization.py  run_ot_loss.py  sinkhorn_loss.py  test.py  unit_tests.py  utils.py  visualization.py
geoemd/hierarchy/: clustering_hierarchy.py  full_station_hierarchy.py  hierarchy_utils.py
geoemd/loss/: distribution_loss.py  interpretable_unbalanced_ot.py  moransi.py  partial_ot.py  sinkhorn_loss.py  unbalanced.py
notebooks/: bike_sharing_case_study.ipynb  scales.ipynb  sinkhorn_loss.ipynb  spatial_regression.ipynb  synthetic_example.ipynb  unpaired_ot.ipynb
preprocessing/: bikes_montreal.py  charging.py  traffic.py  tune_bikes.py
scripts/: benchmark_with_OT.py  calibrate_sinkhorn.py  config_bikes.py  eval_bikes.py  evaluate.py  models.py  train_bikes.py  train_test.py
spatial/: augment.py  test_scales.py  utils.py
spatial_multi_scale_1D/: test_scales.py
spatiotemporal/: calibrate_sinkhorn.py  config.py  emd_eval.py  hierarchy.py  hierarchy_utils.py  model_wrapper.py  optimal_transport.py  run_ot_loss.py  sinkhorn_loss.py  station_hierarchy.py  test.py  unit_tests.py  utils.py  visualization.py
tests/: test_hierarchy.py
